--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Vojtěch Kaláb</title>
 </head>
 <body>
+    <center>
     <pre>
     _    _   _  ___      _ 
    / \  | | | |/ _ \    | |
@@ -12,6 +13,7 @@
  / ___ \|  _  | |_| | |_| |
 /_/   \_\_| |_|\___/ \___/ 
     </pre>
+    </center>
     
 </body>
 </html>
