--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!-- Lidi, co čtou zdrojáky jsou cool, change my mind -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vojtěch Kaláb</title>
+    <title>Hello world</title>
 </head>
 <body>
     <center>
